# axiom-scrapers

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: adding-a-scraper.md  architecture.md  output-format.md
src/axiom_scrapers/: cli.py
src/axiom_scrapers/_common/: __init__.py  akn.py  base.py  http.py  text.py
src/axiom_scrapers/_common/tests/: test_akn.py  test_base.py  test_http.py  test_text.py
src/axiom_scrapers/jurisdictions/us_il/statutes/: scrape.py
src/axiom_scrapers/jurisdictions/us_il/statutes/tests/: test_parse.py
src/axiom_scrapers/jurisdictions/us_il/statutes/tests/fixtures/: 35_155_2.html
tests/: test_cli.py
