[project]
name = "axiom-scrapers"
version = "0.1.0"
description = "Scrapers for global statutes, regulations, bills, and rulemaking. Emits Akoma Ntoso 3.0 XML for Atlas ingest."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Axiom Foundation", email = "hello@axiom-foundation.org" }]
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
axiom-scrape = "axiom_scrapers.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom_scrapers"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/axiom_scrapers"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-q",
  "--strict-markers",
  "--cov=axiom_scrapers",
  "--cov-report=term-missing",
  "--cov-fail-under=85",
]

[tool.coverage.run]
source = ["src/axiom_scrapers"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
